Fixed cart overlap footer on desktop.

--- a/components/cart/desktop/index.module.scss
+++ b/components/cart/desktop/index.module.scss
@@ -7,7 +7,6 @@
         top: 1em;
 
         z-index: 1;
-        margin-bottom: -1em;
 
         text-align: left;
     }
